# agent311

./: .gitignore  CLAUDE.md  README.md  nixpacks.toml  pyproject.toml  start.sh
.claude/: launch.json  skills
agent311/: main.py  nixpacks.toml  pyproject.toml  railpack.json  skill_loader.py  start.sh
agent311/.claude/skills/311-resolution-rate/: SKILL.md
agent311/.claude/skills/analyze-311-data/: SKILL.md
agent311/.claude/skills/create-report/: SKILL.md
agent311/.claude/skills/download-311-data/: SKILL.md
agent311/.claude/skills/hello-world/: SKILL.md
agent311/.claude/skills/railway-deploy/: SKILL.md
agent311/.claude/skills/railway-deploy/references/: mcp-tool-reference.md  troubleshooting.md
agent311/.claude/skills/visualize/: SKILL.md
agent311/agent311/: auth.py  db.py  download_311.py  main.py
agentui/: package-lock.json  package.json  railpack.json
agentui/app/: globals.css  layout.tsx  robots.ts
agentui/components/: artifact-panel.tsx  chat-input.tsx  chat-messages.tsx  chat.tsx  sidebar.tsx
agentui/lib/: auth.ts  chat-store.ts  reports-api.ts  session-api.ts  utils.ts
agentui/public/: ai.txt
assistantui/: nixpacks.toml  package-lock.json  package.json
docs/: agent-sdk-guide.md  agentui-frontend.md  architecture.md  git-and-gh-guide.md  railway-deployment-guide.md  railway-fastapi-setup.md  railway-nextjs-assistantui.md  railway-nextjs-setup.md  railway-react-frontend.md  sse-http2-debugging.md  view-content-artifact-viewer.md
frontend/: .env.production  index.html  nixpacks.toml  package-lock.json  package.json
(+17 files in other folders)
