[project]
name = "agent311"
version = "0.1.0"
description = ""
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk",
    "fastapi",
    "matplotlib>=3.10.8",
    "uvicorn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent311"]
